# avauth-proxy

./: .gitignore  Dockerfile  Dockerfile.mock_oauth  Makefile  README.md  SRS.md  USAGE.md  alembic.ini  config.toml  config.toml.example  docker-compose.yaml  docker-compose.yaml.example  docker-compose_test.yaml  mock_oauth2_server.py  proxies_config.toml  proxies_config.toml.example  pyproject.toml  requirements.txt  run_tests.py  setup.py
avauth-proxy/: __init__.py  app.py  config.py  routes.py  utils.py
avauth-proxy/nginx_templates/: custom_template.conf.j2  default.conf.j2
avauth-proxy/templates/: base.html  dashboard.html  login.html  status.html
avauth_proxy/: __init__.py  app.py  config.py  models.py  routes.py  utils.py
avauth_proxy/blueprints/: __init__.py  auth_routes.py  logs_routes.py  metrics_routes.py  proxy_routes.py  template_routes.py  user_routes.py
avauth_proxy/nginx_templates/: custom_template.conf.j2  default.conf copy.j2  default.conf.j2  nginx.conf  oauth2_disabled.conf.j2
avauth_proxy/services/: health_monitor.py  log_manager.py  metrics_collector.py  metrics_service.py  user_manager.py
avauth_proxy/templates/: base.html  dashboard.html  login.html  status.html
avauth_proxy/tests/: config_test.toml  conftest.py  test_app.py  test_auth.py  test_auth_utils.py  test_integration.py  test_local_auth.py  test_logs.py  test_metrics.py  test_nginx.py  test_proxy.py
avauth_proxy/utils/: __init__.py  auth_utils.py  config_utils.py  file_utils.py  (+6 more)
migrations/: env.py
nginx/: nginx.conf
tests/: test_app.py
tools/: check_containers.py
(+12 files in other folders)
